tests/valid/test4.c
int x = 10;
int y = 20;

if (x < y) {
    if (x == 10) {
        x = x + 1;
    } else {
        x = x - 1;
    }
} else {
    y = y + 1;
}
