tests/errors/error_syntax_empty_if_condition.c
int x = 10;
if () {
    x = 20;
}
